test/Fail/Issue821.err
Issue821.agda:26.9-10: error: [UnequalTerms]
x != (f _ x) of type (D A)
when checking that the expression p has type P (f _ x)
